# colintle-matrix

./: CMakeLists.txt  README.md  hello_test.cc  operations.h  operations_test.cc
src/: CMakeLists.txt  tensor.cc  tensor.h
src/operations/: CMakeLists.txt  add.h  apply.h  inverse.h  multiply.h  scale.h  subtract.h  transpose.h
test/: CMakeLists.txt  operations_add_test.cc  operations_apply_test.cc  operations_inverse_test.cc  operations_multiply_test.cc  operations_scale_test.cc  operations_subtract_test.cc  operations_transpose_test.cc  tensor_test.cc
