include(GoogleTest)

add_executable(TensorTests tensor_test.cc)
target_link_libraries(TensorTests PRIVATE MatrixLibraryAPI gtest_main)
gtest_discover_tests(TensorTests)

add_executable(OperationsAddTests operations_add_test.cc)
target_link_libraries(OperationsAddTests PRIVATE MatrixLibraryAPI gtest_main)
gtest_discover_tests(OperationsAddTests)

add_executable(OperationsSubtractTests operations_subtract_test.cc)
target_link_libraries(OperationsSubtractTests PRIVATE MatrixLibraryAPI gtest_main)
gtest_discover_tests(OperationsSubtractTests)

add_executable(OperationsScaleTests operations_scale_test.cc)
target_link_libraries(OperationsScaleTests PRIVATE MatrixLibraryAPI gtest_main)
gtest_discover_tests(OperationsScaleTests)

add_executable(OperationsMultiplyTests operations_multiply_test.cc)
target_link_libraries(OperationsMultiplyTests PRIVATE MatrixLibraryAPI gtest_main)
gtest_discover_tests(OperationsMultiplyTests)

add_executable(OperationsTransposeTests operations_transpose_test.cc)
target_link_libraries(OperationsTransposeTests PRIVATE MatrixLibraryAPI gtest_main)
gtest_discover_tests(OperationsTransposeTests)

add_executable(OperationsInverseTests operations_inverse_test.cc)
target_link_libraries(OperationsInverseTests PRIVATE MatrixLibraryAPI gtest_main)
gtest_discover_tests(OperationsInverseTests)
